integrate with bluetooth device. and implement content provider for log

--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,6 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../appcompat_v7
-android.library.reference.2=../../workspace_playground/FlatUI/library/src/main
+android.library.reference.1=../pic-collage-android/ActionBar-PullToRefresh/extras/actionbarcompat
+android.library.reference.2=../pic-collage-android/ActionBar-PullToRefresh/library
+android.library.reference.3=../../workspace_playground/kaleidopic/FlatUI/library/src/main
