--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,28 +8,36 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="lab.prada.android.app.idrink.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="lab.prada.android.app.idrink.SettingsActivity"
-            android:label="@string/title_activity_settings" >
-        </activity>
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings" />
         <activity
-            android:name="lab.prada.android.app.idrink.LogActivity"
-            android:label="@string/title_activity_log" >
-        </activity>
+            android:name=".LogActivity"
+            android:label="@string/title_activity_log" />
+        <activity android:name=".DeviceListActivity"
+                  android:label="@string/select_device"
+                  android:theme="@android:style/Theme.Dialog"
+                  android:configChanges="orientation|keyboardHidden" />
+        <service android:name="lab.prada.android.app.idrink.service.BluetoothChatService"/>
+        <provider
+            android:name="lab.prada.android.app.idrink.LogProvider"
+            android:authorities="lab.prada.android.app.idrink"
+            android:syncable="true" />
     </application>
-
 </manifest>
