--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,33 +19,43 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="lab.prada.android.app.idrink.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".SettingsActivity"
+            android:name="lab.prada.android.app.idrink.SettingsActivity"
             android:label="@string/title_activity_settings" />
         <activity
-            android:name=".LogActivity"
+            android:name="lab.prada.android.app.idrink.LogActivity"
             android:label="@string/title_activity_log" />
-        <activity android:name=".DeviceListActivity"
-                  android:label="@string/select_device"
-                  android:theme="@android:style/Theme.Dialog"
-                  android:configChanges="orientation|keyboardHidden" />
-        <service android:name="lab.prada.android.app.idrink.service.BluetoothChatService"/>
+        <activity
+            android:name="lab.prada.android.app.idrink.DeviceListActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:label="@string/select_device"
+            android:theme="@android:style/Theme.Dialog" />
+
+        <service android:name="lab.prada.android.app.idrink.service.BluetoothChatService" />
+
         <provider
             android:name="lab.prada.android.app.idrink.LogProvider"
             android:authorities="lab.prada.android.app.idrink"
             android:syncable="true" />
-        <receiver
-            android:name=".AlarmBoardcastReceiver" >
-            <intent-filter> 
+
+        <receiver android:name="lab.prada.android.app.idrink.AlarmBoardcastReceiver" >
+            <intent-filter>
                 <action android:name="com.manish.alarm.ACTION" />
-            </intent-filter> 
+            </intent-filter>
         </receiver>
+
+        <activity
+            android:name="lab.prada.android.app.idrink.ChartActivity"
+            android:label="@string/title_activity_chart" >
+        </activity>
     </application>
+
 </manifest>
