--- a/iDrink/build.gradle
+++ b/iDrink/build.gradle
@@ -6,7 +6,11 @@ android {
 
     defaultConfig {
         minSdkVersion 8
-        targetSdkVersion 18
+        targetSdkVersion 19
+    }
+
+    lintOptions {
+        abortOnError false
     }
 
     buildTypes {
@@ -18,11 +22,10 @@ android {
 }
 
 dependencies {
-    compile project(':actionbarcompat')
-    compile project(':actionbar_pulltorefresh')
-    compile project(':flatUI')
     compile 'com.android.support:support-v4:+'
     compile 'com.android.support:appcompat-v7:+'
-    compile files('libs/android-query-0.25.9.jar')
+    compile 'com.github.chrisbanes.actionbarpulltorefresh:extra-abc:0.9.3'
+    compile 'com.googlecode.android-query:android-query:0.25.9'
     compile files('libs/graphview-3.1.jar')
+    compile project(':flatUI')
 }
