--- a/iDrink/build.gradle
+++ b/iDrink/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        minSdkVersion 8
+        minSdkVersion 9
         targetSdkVersion 19
     }
 
@@ -21,5 +21,7 @@ dependencies {
     compile 'com.android.support:support-v4:+'
     compile 'com.android.support:appcompat-v7:+'
     compile 'com.googlecode.android-query:android-query:0.25.9'
+    compile 'info.hoang8f:fbutton:1.0.5'
     compile files('libs/GraphView-3.1.2.jar')
+
 }
