--- a/iDrink/build.gradle
+++ b/iDrink/build.gradle
@@ -11,7 +11,7 @@ android {
 
     buildTypes {
         release {
-            runProguard false
+            // runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
@@ -19,7 +19,7 @@ android {
 
 dependencies {
     compile 'com.android.support:support-v4:+'
-    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:appcompat-v7:19.+'
     compile 'com.googlecode.android-query:android-query:0.25.9'
     compile files('libs/GraphView-3.1.2.jar')
 }
