--- a/iDrink/build.gradle
+++ b/iDrink/build.gradle
@@ -18,10 +18,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:+'
     compile 'com.android.support:appcompat-v7:19.+'
     compile 'com.googlecode.android-query:android-query:0.25.9'
     compile 'info.hoang8f:fbutton:1.0.5'
-    compile files('libs/GraphView-3.1.2.jar')
-
+    compile 'com.melnykov:floatingactionbutton:1.1.0'
+    compile 'com.jjoe64:graphview:3.1.3'
 }
